<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true" >

	<!-- here -->

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/background_dark"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="20dp"
				android:text="@string/basic"
				android:textColor="@android:color/white"
				android:textSize="15sp"
				android:textStyle="bold" />
		</LinearLayout>

		<TextView
			android:id="@+id/BasicHow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="20dp"
			android:text="@string/basicchild"
			android:textColor="@android:color/background_dark"
			android:textSize="15sp"
			android:textStyle="bold" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/background_dark"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="20dp"
				android:text="@string/Inaccuracy"
				android:textColor="@android:color/white"
				android:textSize="15sp"
				android:textStyle="bold" />
		</LinearLayout>

		<TextView
			android:id="@+id/InaccuracyHow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="20dp"
			android:text="@string/InaccuracyChild"
			android:textColor="@android:color/background_dark"
			android:textSize="15sp"
			android:textStyle="bold" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/background_dark"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/textView3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="20dp"
				android:text="@string/Recoil"
				android:textColor="@android:color/white"
				android:textSize="15sp"
				android:textStyle="bold" />
		</LinearLayout>
 <TextView
   android:id="@+id/RecoilHow"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:padding="20dp"
   android:text="@string/RecoilChild"
   android:textColor="@android:color/background_dark"
   android:textSize="15sp"
   android:textStyle="bold" />
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/background_dark"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/textView4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="20dp"
				android:text="@string/HowTo"
				android:textColor="@android:color/white"
				android:textSize="15sp"
				android:textStyle="bold" />
		</LinearLayout>
		<TextView
   android:id="@+id/CompensateHow"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:padding="20dp"
   android:text="@string/HowToChild"
   android:textColor="@android:color/background_dark"
   android:textSize="15sp"
   android:textStyle="bold" />
	</LinearLayout>

</ScrollView>